# AutoriaProject

./: .env  .gitignore  Dockerrun.aws.json  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
backend/apps/advert/: apps.py  choises.py  consumers.py  filters.py  models.py  routing.py  serializers.py  urls.py  utils.py  views.py
backend/apps/auth/: serializers.py  urls.py  views.py
backend/apps/cars/: choises.py  filters.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/apps/dealerships/: models.py  serializers.py  urls.py  views.py
backend/apps/users/: managers.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/configs/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/configs/extra_conf/: __init__.py  celery_conf.py  channels_conf.py  rest_conf.py
backend/core/: pagination.py  permissions.py
backend/core/dataclasses/: advert_dataclass.py  user_dataclass.py
backend/core/enums/: action_token_enum.py  regex_enum.py
backend/core/handelers/: error_handler.py
backend/core/handlers/: error_handler.py
backend/core/middlewares/: auth_socket_middleware.py
backend/core/services/: email_service.py  jwt_service.py  upload_avatar.py
backend/templates/: advertReview.html  notify.html
client/: asset-manifest.json  index.html
client/static/css/: main.00ed248c.css  main.00ed248c.css.map  main.a745b779.css  main.a745b779.css.map
client/static/js/: main.00b977b8.js  main.00b977b8.js.map  (+8 more)
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.css  index.js  router.js
(+53 files in other folders)
